--- a/src/css/ProyectoCard.css
+++ b/src/css/ProyectoCard.css
@@ -1,7 +1,7 @@
-.proyectos {
-  margin-left: 15px;
+.subtitulo {
   display: flex;
   gap: 10px;
+  align-items: center;
 }
 
 .card-container {
@@ -15,7 +15,7 @@
   width: 350px;
   height: 220px;
   border-radius: 5%;
-  margin-left: 15px;
+
   overflow: hidden;
 }
 
@@ -42,7 +42,9 @@
 @media (width < 750px) {
   .card-container {
     display: block;
-    padding: 25px;
+    margin-right: 15px;
+    margin-top: 25px;
+    margin-bottom: 25px;
   }
   .card {
     width: 100%;
