--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -73,11 +73,7 @@
   height: 40px;
   position: absolute;
   right: 40px;
-}
-
-@media (width <640px) {
-  .navbar {
-  }
+  cursor: pointer;
 }
 
 .dark-mode {
