--- a/src/css/SocialButton.css
+++ b/src/css/SocialButton.css
@@ -1,5 +1,12 @@
 .social-button {
   margin-right: 10px;
+  transition: 0.3s ease;
+}
+
+.social-button:hover {
+  transform: scale(1.1);
+  transform: translateY(-3px);
+  cursor: pointer;
 }
 
 .social-container {
